--- a/demo/index.html
+++ b/demo/index.html
@@ -19,9 +19,9 @@
 
 <body>
     <div ng-controller="IndexController" class="container">
-        <div cs-datatable cs-options="datatableOptions1"></div>
+        <div cs-datatable cs-options="datatableOptions"></div>
 
-        <br/>
+        <!-- <br/>
 
         <div cs-datatable cs-options="datatableOptions2" class="theme-1"></div>
 
@@ -31,7 +31,7 @@
 
         <br/>
 
-        <div cs-datatable cs-options="datatableOptions3" class="theme-3"></div>
+        <div cs-datatable cs-options="datatableOptions3" class="theme-3"></div> -->
     </div>
 </body>
 
