--- a/demo/index.html
+++ b/demo/index.html
@@ -14,25 +14,30 @@
             margin: 0 auto;
             width: 700px;
         }
+
+        .double-space-top { 
+            margin-top: 20px
+        }
+
+        .space-top { 
+            margin-top: 10px
+        }
     </style>
 </head>
 
 <body>
-    <div ng-controller="IndexController" class="container">
-        <div cs-datatable cs-options="datatableOptions"></div>
-
-        <!-- <br/>
-
-        <div cs-datatable cs-options="datatableOptions2" class="theme-1"></div>
-
-        <br/>
-
-        <div cs-datatable cs-options="datatableOptions3" class="theme-2"></div>
-
-        <br/>
-
-        <div cs-datatable cs-options="datatableOptions3" class="theme-3"></div> -->
+    <div class="container">
+        <h1>Datatable demo</h1>
     </div>
+    <div ng-controller="IndexController" class="container space-top">
+        <div cs-datatable cs-options="datatableOptions"></div>
+    </div>
+    <div class="container double-pad-top">
+        <h1>Examples</h1>
+    </div>  
+    <div class="container space-top">
+        <a href="date-examples.html">Date examples</a>
+    </div> 
 </body>
 
 </html>
