--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,8 @@
         <h1>Examples</h1>
     </div>  
     <div class="container space-top">
-        <a href="date-examples.html">Date examples</a>
+        <a href="date-examples.html">Date examples</a><br>
+        <a href="filter-examples.html">Filter examples</a>
     </div> 
 </body>
 
