--- a/demo/filter-examples.html
+++ b/demo/filter-examples.html
@@ -6,6 +6,7 @@
     <script src="../dist/cs-angular.js"></script>
     <script src="app.js"></script>
     <script src="filter-examples.controller.js"></script>
+    <link rel="stylesheet" href="../dist/cs-angular.min.css" />
     <style>
         .container {
             margin: 0 auto;
