--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,7 @@
     <script src="../dist/cs-angular.js"></script>
     <script src="app.js"></script>
     <script src="index.controller.js"></script>
-    <link rel="stylesheet" href="../dist/theme-1.css" />
-    <link rel="stylesheet" href="../dist/theme-2.css" />
-    <link rel="stylesheet" href="../dist/theme-3.css" />
+    <link rel="stylesheet" href="../dist/cs-angular.min.css" />
     <style>
         .container {
             margin: 0 auto;
