--- a/demo/index.html
+++ b/demo/index.html
@@ -34,8 +34,17 @@
         <h1>Examples</h1>
     </div>  
     <div class="container space-top">
-        <a href="date-examples.html">Date examples</a><br>
-        <a href="filter-examples.html">Filter examples</a>
+        <ul>
+            <li>
+                <a href="date-examples.html">Date examples</a>
+            </li>
+            <li>
+                <a href="filter-examples.html">Filter examples</a>
+            </li>
+            <li>
+                <a href="styling-examples.html">Styling examples</a>
+            </li>
+        </ul>
     </div> 
 </body>
 
