Custom svg icons

--- a/demo/styling-examples.html
+++ b/demo/styling-examples.html
@@ -44,6 +44,12 @@
         </style>
         <div cs-datatable cs-options="blueDatatableOptions"></div>
     </div>
+    <div class="container double-space-top">
+            <h1>Custom icons example</h1>
+        </div>
+        <div class="container space-top">
+            <div cs-datatable cs-options="customIconsDatatableOptions"></div>
+        </div>
 </body>
 
 </html>
