--- a/demo/styling-examples.html
+++ b/demo/styling-examples.html
@@ -45,7 +45,7 @@
         <div cs-datatable cs-options="blueDatatableOptions"></div>
     </div>
     <div class="container double-space-top">
-            <h1>Custom icons example</h1>
+            <h1>Custom (svg) icons example</h1>
         </div>
         <div class="container space-top">
             <div cs-datatable cs-options="customIconsDatatableOptions"></div>
